# notebook-parser

./: .env.example  .gitignore  README.md  RELEASING.md  hello.py  main.py  note.md  pyproject.toml  test_output.md
.github/workflows/: release.yml
prompts/: bullet-points-with-tags.txt  bullet-points.txt  clean-bullet-points.txt  generate-tags.txt
scripts/: release.sh  test-release-locally.sh
src/notebook_parser/: __init__.py  cli.py  formatters.py  image_optimizer.py  ocr.py  prompt_loader.py  template_engine.py
src/notebook_parser/llm/: __init__.py  claude_vision.py  ollama_vision.py
templates/: bullet-points-template.md  note-template.md
tests/: conftest.py  test_cli.py  test_formatters.py  test_preprocess.py  test_prompt_loader.py  test_template_engine.py
