[project]
name = "notebook-parser"
version = "0.1.0"
description = "CLI tool for extracting text from images using OCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pillow>=10.0.0",
    "easyocr>=1.7.2",
    "transformers>=4.57.6",
    "torch>=2.10.0",
    "opencv-python>=4.13.0.90",
    "numpy>=2.4.1",
]

[project.scripts]
notebook-parser = "main:app"
